--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,14 +9,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <!-- Silver Challenge: Adding Font Awesome -->
-        </button><a class="navbar-brand"><span><FaIcon @icon="paw" /></span> Tracker</a>
+        </button><a class="navbar-brand"><span>
+            <FaIcon @icon="paw" /></span> Tracker</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="top-navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#">Test Link</a></li>
-          <li><a href="#">Test Link</a></li>
+          <li>{{#link-to 'sightings'}}Sightings{{/link-to}}</li>
+          <li>{{#link-to 'cryptids'}}Cryptids{{/link-to}}</li>
+          <li>{{#link-to 'witnesses'}}Witnesses{{/link-to}}</li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
