--- a/app/templates/cryptids.hbs
+++ b/app/templates/cryptids.hbs
@@ -2,10 +2,11 @@
   {{#each model as |cryptid|}}
     <div class="col-xs-12 col-sm-3 text-center">
       <div class="media well">
+
         {{#link-to 'cryptid' cryptid.id title = cryptid.name }}
-          <img class="media-object thumbnail" src="{{if cryptid.profileImg cryptid.profileImg
-        'assets/images/cryptids/blank_th.png'}}" alt="{{cryptid.name}}" width="100%" height="100%">
+        {{ cryptid-thumbnail-helper cryptid.profileImg}}
         {{/link-to}}
+        
         <div class="caption">
           <h3>{{cryptid.name}}</h3>
         </div>
