--- a/app/templates/cryptids.hbs
+++ b/app/templates/cryptids.hbs
@@ -2,11 +2,10 @@
   {{#each model as |cryptid|}}
     <div class="col-xs-12 col-sm-3 text-center">
       <div class="media well">
-
+        <!--Gold Challenge: Creating a Custom Thumbnail Helper-->
         {{#link-to 'cryptid' cryptid.id title = cryptid.name }}
         {{ cryptid-thumbnail-helper cryptid.profileImg}}
         {{/link-to}}
-        
         <div class="caption">
           <h3>{{cryptid.name}}</h3>
         </div>
