--- a/app/templates/sightings/new.hbs
+++ b/app/templates/sightings/new.hbs
@@ -23,5 +23,5 @@
       type="text" class="form-control" name="location" required=true}}
   </div>
   <button type="submit" class="btn btn-primary btn-block">Create</button>
-  <button {{action 'cancel'}} class="btn btn-link btn-block">Cancel</button>
+  <button {{action "cancel" on="click"}} class="btn btn-link btn-block">Cancel</button>
 </form>
