--- a/app/templates/sightings/new.hbs
+++ b/app/templates/sightings/new.hbs
@@ -2,19 +2,19 @@
 <form {{action "create" on="submit"}}>
   <div class="form-group">
     <label for="name">Cryptid</label>
-    {{#x-select value=model.sighting.cryptid class="form-control"}}
-      {{#x-option}}Select Cryptid{{/x-option}}
+    {{#x-select value=model.sighting.cryptid class="form-control" as |xs|}}
+      {{#xs.option}}Select Cryptid{{/xs.option}}
       {{#each model.cryptids as |cryptid|}}
-        {{#x-option value=cryptid}}{{cryptid.name}}{{/x-option}}
+        {{#xs.option value=cryptid }}{{cryptid.name}}{{/xs.option}}
       {{/each}}
     {{/x-select}}
   </div>
   <div class="form-group">
     <label>Witnesses</label>
-    {{#x-select value=model.sighting.witnesses multiple=true class="form-control"}}
-      {{#x-option}}Select Witnesses{{/x-option}}
+    {{#x-select value=model.sighting.witnesses multiple=true class="form-control" as |xs|}}
+      {{#xs.option}}Select Witnesses{{/xs.option}}
       {{#each model.witnesses as |witness|}}
-        {{#x-option value=witness}}{{witness.fullName}}{{/x-option}}
+        {{#xs.option value=witness}}{{witness.fullName}}{{/xs.option}}
       {{/each}}
     {{/x-select}}
   </div>
