--- a/app/templates/sightings/new.hbs
+++ b/app/templates/sightings/new.hbs
@@ -2,7 +2,8 @@
 <form {{action "create" on="submit"}}>
   <div class="form-group">
     <label for="name">Cryptid</label>
-    {{#x-select value=model.sighting.cryptid class="form-control" as |xs|}}
+    {{#x-select action="didMakeCryptidSelection" on="change"
+      class="form-control" as |xs|}}
       {{#xs.option}}Select Cryptid{{/xs.option}}
       {{#each model.cryptids as |cryptid|}}
         {{#xs.option value=cryptid }}{{cryptid.name}}{{/xs.option}}
@@ -11,7 +12,9 @@
   </div>
   <div class="form-group">
     <label>Witnesses</label>
-    {{#x-select value=model.sighting.witnesses multiple=true class="form-control" as |xs|}}
+    {{#x-select action="didMakeWitnessSelection" on="change"
+      multiple=true
+      class="form-control" as |xs|}}
       {{#xs.option}}Select Witnesses{{/xs.option}}
       {{#each model.witnesses as |witness|}}
         {{#xs.option value=witness}}{{witness.fullName}}{{/xs.option}}
