--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@
 .navbar {
   background-color: #99ff99;
   border-radius: 2px;
-  box-shadow: 1px 1px;
   padding: 2px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
