--- a/app/templates/sightings/index.hbs
+++ b/app/templates/sightings/index.hbs
@@ -2,11 +2,12 @@
   {{#each model as |sighting|}}
     <div class="col-xs-12 col-sm-3 text-center">
       <div class="media well">
+
+        {{#link-to 'sighting' sighting.id title = sighting.location }}
         <img class="media-object thumbnail" src="{{if sighting.cryptid.profileImg
           sighting.cryptid.profileImg 'assets/images/cryptids/blank_th.png'}}"
           alt="{{sighting.cryptid.name}}" width="100%" height="100%">
-
-        
+          {{/link-to}}
 
         <div class="caption">
           <h3>{{sighting.cryptid.name}}</h3>
