--- a/app/templates/sightings/new.hbs
+++ b/app/templates/sightings/new.hbs
@@ -22,10 +22,18 @@
     {{/x-select}}
   </div>
   <div class="form-group">
-    <label for="location">Location</label> {{input value=model.sighting.location
-      type="text" class="form-control" name="location" required=true}}
-    <label for="date">Date</label> {{input value=model.sighting.sightingDate
-        type="date" class="form-control" name="date" required=true}}
+    <label for="location">Location</label>
+     {{input value=model.sighting.location
+      type="text"
+      class="form-control"
+      name="location"
+      required=true}}
+      <!-- Silver Challenge: Sighting Date -->
+    <label for="date">Date</label>
+     {{input value=model.sighting.sightedAt
+        type="date"
+        class="form-control"
+        name="date" required=true}}
   </div>
   <button type="submit" class="btn btn-primary btn-block">Create</button>
   <button {{action "cancel" on="click"}} class="btn btn-link btn-block">Cancel</button>
