--- a/app/templates/cryptids.hbs
+++ b/app/templates/cryptids.hbs
@@ -1,15 +1,9 @@
 <div class="row">
   {{#each model as |cryptid|}}
     <div class="col-xs-12 col-sm-3 text-center">
-      <div class="media well">
-        <!--Gold Challenge: Creating a Custom Thumbnail Helper-->
-        {{#link-to 'cryptid' cryptid.id title = cryptid.name }}
-          {{ cryptid-thumbnail-helper cryptid.profileImg cryptid.name }}
-        {{/link-to}}
-        <div class="caption">
-          <h3>{{cryptid.name}}</h3>
-        </div>
-      </div>
+      {{#link-to 'cryptid' cryptid.id}}
+        {{listing-item imagePath=cryptid.profileImg name=cryptid.name}}
+      {{/link-to}}
     </div>
   {{else}}
     <div class="jumbotron">
