--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,28 +1,6 @@
 <header>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <!-- Silver Challenge: Adding Font Awesome -->
-        </button><a class="navbar-brand"><span>
-            <FaIcon @icon="paw" /></span> Tracker</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="top-navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li>{{#link-to 'sightings'}}Sightings{{/link-to}}</li>
-          <li>{{#link-to 'cryptids'}}Cryptids{{/link-to}}</li>
-          <li>{{#link-to 'witnesses'}}Witnesses{{/link-to}}</li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+  <!--Silver Challenge: Making the NavBar a Component -->
+  {{navbar showLinkCryptids=true}}
 </header>
 <div class="container">
   {{#if isAlertShowing}}
